# serializer version: 1
# name: test_all_entities[fan.model0_ventilation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        <VentilationMode.PERMANENT: 'permanent'>,
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.SENSOR_DRIVEN: 'sensor_driven'>,
        <VentilationMode.SENSOR_OVERRIDE: 'sensor_override'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.model0_ventilation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:fan',
    'original_name': 'Ventilation',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 9>,
    'translation_key': 'ventilation',
    'unique_id': 'gateway0_deviceSerialViAir300F-ventilation',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[fan.model0_ventilation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'model0 Ventilation',
      'icon': 'mdi:fan',
      'percentage': 0,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': list([
        <VentilationMode.PERMANENT: 'permanent'>,
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.SENSOR_DRIVEN: 'sensor_driven'>,
        <VentilationMode.SENSOR_OVERRIDE: 'sensor_override'>,
      ]),
      'supported_features': <FanEntityFeature: 9>,
      'vicare_quickmodes': list([
        'comfort',
        'eco',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'fan.model0_ventilation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[fan.model1_ventilation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        <VentilationMode.PERMANENT: 'permanent'>,
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.SENSOR_DRIVEN: 'sensor_driven'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.model1_ventilation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:fan',
    'original_name': 'Ventilation',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 25>,
    'translation_key': 'ventilation',
    'unique_id': 'gateway1_deviceId1-ventilation',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[fan.model1_ventilation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'model1 Ventilation',
      'icon': 'mdi:fan',
      'percentage': 0,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': list([
        <VentilationMode.PERMANENT: 'permanent'>,
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.SENSOR_DRIVEN: 'sensor_driven'>,
      ]),
      'supported_features': <FanEntityFeature: 25>,
      'vicare_quickmodes': list([
        'comfort',
        'eco',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'fan.model1_ventilation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[fan.model2_ventilation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.STANDBY: 'standby'>,
        <VentilationMode.STANDARD: 'standard'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.model2_ventilation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:fan',
    'original_name': 'Ventilation',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 8>,
    'translation_key': 'ventilation',
    'unique_id': 'gateway2_################-ventilation',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[fan.model2_ventilation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'model2 Ventilation',
      'icon': 'mdi:fan',
      'preset_mode': None,
      'preset_modes': list([
        <VentilationMode.VENTILATION: 'ventilation'>,
        <VentilationMode.STANDBY: 'standby'>,
        <VentilationMode.STANDARD: 'standard'>,
      ]),
      'supported_features': <FanEntityFeature: 8>,
      'vicare_quickmodes': list([
        'comfort',
        'eco',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'fan.model2_ventilation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
